# onera

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  bunfig.toml  docker-compose.azure.yml  docker-compose.yml  docker-entrypoint.sh  extract_png.js  nginx.conf  package.json  playwright.config.ts  svelte.config.js  turbo.json  vite.config.ts
.cursor/plans/: fumadocs_setup_plan_c8f0b0b2.plan.md
.github/workflows/: azure-static-web-apps-polite-sea-0a15daa00.yml  azure-static-web-apps-victorious-field-05db5b900.yml  azure-static-web-apps-yellow-stone-038a74d00.yml  build-acr.yml  docs.yml  main_onera-backend.yml  prod-backend.yml  prod-frontend.yml  rotate-apple-secret.yml  stage-backend.yml  stage-frontend.yml
.opencode/: opencode.json
.opencode/agents/: api-design.md  backend-dev.md  web-dev.md
.turbo/cache/: 31b29a11df352dc1-meta.json  31b29a11df352dc1.tar.zst  caf9ad042337e599-meta.json  caf9ad042337e599.tar.zst
apps/api/: .env.example  main.py
apps/docs/: mdx-components.tsx  package.json  source.config.ts
apps/server/: .env.example  Dockerfile  drizzle.config.ts  package.json  tsconfig.json
apps/web/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  staticwebapp.config.json  tsconfig.json  vite.config.ts
backend/: database.py  main.py  requirements.txt
backend/models/: __init__.py  chat.py  credential.py
backend/routers/: auth.py  chats.py  deps.py  user_keys.py
convex/: chats.ts  credentials.ts  folders.ts  notes.ts  prompts.ts  schema.ts  userKeys.ts  users.ts
infra/: docker-compose.dev.yml  docker-compose.prod.yml
infra/enclave/: Caddyfile  Cargo.toml  Dockerfile.dev  flake.nix
infra/enclave/config/: servers.example.toml  servers.toml
infra/enclave/src/: attestation.rs  inference.rs  main.rs  noise.rs  router.rs
scripts/: deploy-azure.sh  generate-apple-client-secret.ts  migrate-clerk-to-supabase.ts  seed-azure-enclave.ts  test-azure-enclave.ts
src/: app.css  app.d.ts  app.html
supabase/: config.toml
tests/: debug-flow.spec.ts  e2e.spec.ts  e2ee-setup.spec.ts
(+462 files in other folders)
